# gilmoreplace_2022

./: .dockerignore  .env.local.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  install.txt  manage.py  package-lock.json  package.json  packages_DO.txt  prod_server.env.example  pyproject.toml  remove_all_migrations  wtforms_fields_dump.json
ansible/: README.md  ansible.cfg  deploy.yml  hosts.ini  vars_dev.yml
deploy/: README.md  analyze_stream_blocks.py  init-letsencrypt.sh
gilmoreplace-next/: .dockerignore  .env.local.example  .gitignore  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
gilmoreplace_2022/: api_router.py  urls.py  views.py  wsgi.py
imagefilters/: wagtail_hooks.py
inlinepanelsorter/: urls.py  views.py  wagtail_hooks.py
interactivegooglemaps/: blocks.py  models.py  wagtail_hooks.py
interactivemaps/: models.py  urls.py  views.py  wagtail_hooks.py
mobileesp/: mdetect.py  middleware.py
postcss_autoprefixer_filter/: __init__.py
towers/: models.py  wagtail_hooks.py
vendors/: __init__.py  apps.py
wagtailvideos_autoencode/: apps.py  signals.py
wt404test/: urls.py  views.py
wtadmin/: models.py  urls.py  wagtail_hooks.py
wtfavicon/: models.py  wagtail_hooks.py
wtforms/: apps.py  blocks.py  edit_handlers.py  fields.py  forms.py  models.py  old_forms_import.py  urls.py  views.py  wagtail_hooks.py
wthomepage/: middleware.py  models.py
wtinstagramtokens/: apps.py  (+3 more)
(+592 files in other folders)
